--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/nligon/2016-07-mvp#readme",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "mongod": "^1.3.0",
+    "mongodb": "^2.2.9"
   }
 }
