--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
+    "body-parser": "^1.15.2",
     "mongod": "^1.3.0",
-    "mongodb": "^2.2.9"
+    "mongodb": "^2.2.9",
+    "request": "^2.74.0"
   }
 }
